# WinToastLibC

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  build_release_zip.cmd
example/: example1.c  example2.c
src/: wintoastlibc.cpp  wintoastlibc.h  wintoastlibc_lazy.c
